prevent buttons from collapsing on searchResults page

--- a/app/assets/css/searchResults.styl
+++ b/app/assets/css/searchResults.styl
@@ -41,5 +41,5 @@
       margin: auto
 
       button
-        width:  90%
+        width:  120px
         margin: auto
