--- a/app/assets/css/styles.css
+++ b/app/assets/css/styles.css
@@ -270,7 +270,7 @@ button {
   margin: auto;
 }
 .recipeBox .recipeButtons div button {
-  width: 90%;
+  width: 120px;
   margin: auto;
 }
 .loginBox {
